# rust-streaming-quotes

./: Cargo.toml  README.md
quote-client/: Cargo.toml
quote-client/src/: cli.rs  main.rs  ping.rs  shutdown.rs  tcp.rs  tickers.rs  udp.rs
quote-core/: Cargo.toml
quote-core/src/: constants.rs  error.rs  lib.rs  protocol.rs  tickers.rs  types.rs  wire.rs
quote-server/: Cargo.toml
quote-server/assets/: tickers.txt
quote-server/src/: cli.rs  config.rs  generator.rs  hub.rs  main.rs  session.rs  tcp.rs  udp_ping.rs
