[workspace]
members = [
  "quote-client",
  "quote-core",
  "quote-server",
]
resolver = "3"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# генерация
rand = "0.9"

# каналы
crossbeam-channel = "0.5"

# ошибки
anyhow = "1"
thiserror = "2"

# graceful shutdown
ctrlc = "3"

# логирование
log = "0.4"
env_logger = "0.11"

# сериализация
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }

# --- опционально, но полезно для тестов ---
tempfile = "3"
assert_cmd = "2"
predicates = "3"
