[package]
name = "quote-client"
version = "0.1.0"
edition = "2024"

[dependencies]
quote-core = { path = "../quote-core" }

crossbeam-channel = { workspace = true }

clap = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
ctrlc = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }
